--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js && gulp"
+    "build": "node build/build.js"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
